--- a/Bank/Bank/Bank.csproj
+++ b/Bank/Bank/Bank.csproj
@@ -16,6 +16,7 @@
 		<PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="7.0.11" />
 		<PackageReference Include="Dapper" Version="2.0.151" />
 		<PackageReference Include="System.Data.SqlClient" Version="4.8.5" />
+		<PackageReference Include="SimpleInjector" Version="5.4.1" />
 	</ItemGroup>
 
 </Project>
