--- a/Bank/Bank/Bank.csproj
+++ b/Bank/Bank/Bank.csproj
@@ -19,4 +19,8 @@
 		<PackageReference Include="SimpleInjector" Version="5.4.1" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Folder Include="Views\" />
+	</ItemGroup>
+
 </Project>
